-code improvements
